.deploy/php_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deployment
  labels:
    app.kubernetes.io/name: php
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: php-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: php-app
    spec:
      containers:
        - name: php
          image: europe-west1-docker.pkg.dev/basic-388908/totea-symfony-react-skeleton-ar/symfony-react-skeleton/php
          ports:
            - containerPort: 9000
