.deploy/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: web-server
  ports:
    - port: 80
